--- a/graphlib-test/graphlib-test.vcxproj.filters
+++ b/graphlib-test/graphlib-test.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClCompile Include="FunctionBuilderTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NodeTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GraphTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
