--- a/graphlib-test/graphlib-test.vcxproj
+++ b/graphlib-test/graphlib-test.vcxproj
@@ -88,6 +88,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FunctionBuilderTest.cpp" />
+    <ClCompile Include="GraphTest.cpp" />
+    <ClCompile Include="NodeTest.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
