--- a/graphlib-core/graphlib-core.vcxproj.filters
+++ b/graphlib-core/graphlib-core.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="graph\Node.h">
       <Filter>Header Files\Graph</Filter>
     </ClInclude>
+    <ClInclude Include="graph\GraphBuilder.h">
+      <Filter>Header Files\Graph</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="graph\function\Function.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files\Graph</Filter>
     </ClCompile>
     <ClCompile Include="Graph.cpp">
+      <Filter>Source Files\Graph</Filter>
+    </ClCompile>
+    <ClCompile Include="graph\GraphBuilder.cpp">
       <Filter>Source Files\Graph</Filter>
     </ClCompile>
   </ItemGroup>
