--- a/graphlib-test/graphlib-test.vcxproj.filters
+++ b/graphlib-test/graphlib-test.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="GraphTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GraphBuilderTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
