Add premake and change to googletest
Removed solution files. Added premake lua script to generate the
solution files. Change test framework to google test. GoogleTest files
are not checked in. They should be in 3rd/gtest-1.7.0

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.lo
 *.o
 *.obj
+*.ilk
 
 # Precompiled Headers
 *.gch
@@ -30,3 +31,7 @@
 # VS files
 *.sdf
 *.opensdf
+*.sln
+*.suo
+*.filters
+*.vcxproj
